# sting_description

./: CMakeLists.txt  README.md  package.xml
config/: display.rviz  joint_names_sting_urdf.yaml
launch/: display.launch
meshes/: base_link.STL  base_link_collision.STL  gripper.STL  gripper_collision.STL  left_finger.STL  left_finger_collision.STL  lower_arm_back.STL  lower_arm_back_collision.STL  lower_arm_front.STL  lower_arm_front_collision.STL  lower_arm_middle.STL  lower_arm_middle_collision.STL  right_finger.STL  right_finger_collision.STL  shoulder.STL  shoulder_collision.STL  upper_arm.STL  upper_arm_collision.STL
urdf/: sting.xacro  sting_standalone.xacro
