<package>
  <name>sting_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for sting robotic arm</p>
    <p>This package contains configuration data, 3D models and launch files
for sting robot</p>
  </description>
  <author>Ebin Philip</author>
  <maintainer email="stargazer18@gmail.com" />
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>